--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -73,7 +73,13 @@ endif()
 
 # Cria os executáveis
 foreach(EXERCISE ${EXERCISES})
-    add_executable(${EXERCISE} src/${EXERCISE}.cpp ${GLAD_C_FILE})
+    if(${EXERCISE} STREQUAL "Hello3D")
+        add_executable(${EXERCISE} src/Tarefa\ 1/Hello3D.cpp ${GLAD_C_FILE})
+        set_target_properties(${EXERCISE} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Tarefa\ 1)
+    else()
+        add_executable(${EXERCISE} src/${EXERCISE}.cpp ${GLAD_C_FILE})
+        set_target_properties(${EXERCISE} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${EXERCISE})
+    endif()
     target_include_directories(${EXERCISE} PRIVATE ${CMAKE_SOURCE_DIR}/include/glad ${glm_SOURCE_DIR} ${stb_image_SOURCE_DIR})
     target_link_libraries(${EXERCISE} glfw ${OPENGL_LIBS})
 endforeach()
