--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -48,6 +48,7 @@ set(EXERCISES
     TriangleTex
     SpherePhong
     Tarefa2
+    Hello3D_AV1
 )
 
 add_compile_options(-Wno-pragmas)
@@ -85,6 +86,9 @@ foreach(EXERCISE ${EXERCISES})
     elseif(${EXERCISE} STREQUAL "Tarefa2")
         add_executable(${EXERCISE} src/Tarefa\ 2/Hello3D.cpp ${GLAD_C_FILE})
         set_target_properties(${EXERCISE} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/Tarefa 2")
+    elseif(${EXERCISE} STREQUAL "Hello3D_AV1")
+        add_executable(${EXERCISE} src/Atividade\ Vivencial\ 1/Hello3D.cpp ${GLAD_C_FILE})
+        set_target_properties(${EXERCISE} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/Atividade Vivencial 1")
     else()
         add_executable(${EXERCISE} src/${EXERCISE}.cpp ${GLAD_C_FILE})
         set_target_properties(${EXERCISE} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${EXERCISE})
